# SDL2Game

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md
Sources/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
Sources/ECS/: Components.h  ECS.h  PositionComponent.h  SpriteComponent.h  TransformComponent.h
